--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@ map.addLayer(drawnItems);
 const drawControl = new L.Control.Draw({ draw: { polygon:true, rectangle:true }, edit: { featureGroup: drawnItems } });
 map.addControl(drawControl);
 
+// ===== On Draw: Show Area in km² =====
+map.on(L.Draw.Event.CREATED, function(e) {
+    const layer = e.layer;
+    drawnItems.addLayer(layer);
+    const latlngs = layer.getLatLngs()[0];
+    const area_m2 = L.GeometryUtil.geodesicArea(latlngs);
+    const area_km2 = (area_m2 / 1e6).toFixed(2);
+    layer.bindPopup("Area: " + area_km2 + " km²").openPopup();
+});
+
 </script>
 </body>
 </html>
